--- a/POSC 521 MPA Capstone/2024-25 Spring/POSC521_2025_Spring.tex
+++ b/POSC 521 MPA Capstone/2024-25 Spring/POSC521_2025_Spring.tex
@@ -118,6 +118,7 @@
     \subsection*{Required Texts}
     \begin{itemize}
         \item \textbf{Denhardt and Denhardt}. \textit{The New Public Service: Serving, Not Steering}. 4th ed. Routledge, 2015.
+        \item \textbf{Hanna-Attisha, Mona}. \textit{What the Eyes Don't See: A Story of Crisis, Resistance, and Hope in an American City}. One World, 2018.
         \item \textbf{Lipsky, Michael}. \textit{Street-Level Bureaucracy: Dilemmas of the Individual in Public Services}. Russell Sage Foundation, 2010.
         \item \textbf{Stivers, Camilla}. \textit{Bureau Men, Settlement Women: Constructing Public Administration in the Progressive Era}. University of Kansas Press, 2000.
     \end{itemize}
