AI policy updates

--- a/POSC 521 MPA Capstone/2024-25 Spring/POSC521_2025_Spring.tex
+++ b/POSC 521 MPA Capstone/2024-25 Spring/POSC521_2025_Spring.tex
@@ -246,7 +246,18 @@ This AI policy is designed to align with our course objectives:
     \item It improves writing skills by providing an additional source of feedback and encouraging revision.
     \item It fosters critical thinking by requiring students to evaluate and incorporate AI feedback thoughtfully.
     \item It contributes to professional development by familiarizing students with AI tools they may encounter in their public administration careers.
+    \item It promotes awareness of ethical considerations and sustainability impacts associated with AI use.
 \end{enumerate}
+
+\subsubsection*{Ethics and Sustainability Considerations}
+
+\noindent Students are expected to engage with AI tools ethically and responsibly. This includes:
+
+\begin{itemize}
+    \item \textbf{Ethical Use}: Avoid using AI to plagiarize or produce content without proper attribution. Cite AI tools as sources when they contribute to your work.
+    \item \textbf{Bias Awareness}: Understand that AI tools can reflect and perpetuate biases present in their training data. Critically evaluate the outputs for fairness and inclusivity.
+    \item \textbf{Sustainability Impact}: Be mindful of the environmental impact of AI, including the carbon emissions associated with large-scale model training and inference. Use AI judiciously and consider alternative methods when feasible.
+\end{itemize}
 
 \subsubsection*{Guidance for Students on AI Use}
 
@@ -254,7 +265,7 @@ This AI policy is designed to align with our course objectives:
     \item When using AI for feedback, always cite it as a source. For example: ``ChatGPT (Version X.X) [AI model]. OpenAI. Feedback received on [Date].''
     \item Be critical of AI-generated content. AI can make mistakes or provide biased information.
     \item Use AI as a tool to enhance your learning, not as a substitute for your own critical thinking and analysis.
-    \item We will discuss ethical AI use and its implications for public administration during our course.
+    \item We will discuss ethical AI use, sustainability impacts, and its implications for public administration during our course.
 \end{itemize}
 
 \subsubsection*{Repercussions for Policy Breaches}
@@ -276,6 +287,7 @@ This AI policy is designed to align with our course objectives:
     \item To prepare students for professional environments where AI tools are increasingly common in public administration.
     \item To encourage critical evaluation of AI-generated feedback and content.
     \item To foster ethical and responsible use of AI in academic and professional settings.
+    \item To promote sustainability awareness by considering the environmental costs of AI use.
 \end{enumerate}
 
 \noindent Assessment of these goals and overall learning objectives will be conducted through:
@@ -292,7 +304,7 @@ This AI policy is designed to align with our course objectives:
 \end{itemize}
 
 \noindent These assessment methods will help ensure that AI use is enhancing, rather than replacing, critical thinking and analytical skills essential to public administration.
- 
+
 \section{Course Requirements}
 \subsection*{Weekly Readings Assignment}
 
