weekly readings schedule section

--- a/POSC 521 MPA Capstone/2024-25 Spring/POSC521_2025_Spring.tex
+++ b/POSC 521 MPA Capstone/2024-25 Spring/POSC521_2025_Spring.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt, letterpaper]{article}
+\documentclass[11pt, letterpaper]{article}
 \usepackage[english]{babel}
 \usepackage[T1]{fontenc}
 \usepackage[margin=1.15in]{geometry}
@@ -33,7 +33,7 @@
         urlcolor=cyan,
         citecolor=purple,
 }
-\usepackage[scaled]{helvet} % Load the helvet package
+\usepackage[scaled]{roboto} % Load the helvet package
 \renewcommand*\familydefault{\sfdefault} % Set the default font to be sans-serif
 \newenvironment{boldnumlist}
 {\begin{enumerate}[label=\textbf{\arabic*.}]}
@@ -423,7 +423,7 @@ Each week includes the following components:
     \end{itemize}
 \end{itemize}
 
-\paragraph{Weeks 2--8: Standard Weekly Workflow}
+\paragraph{Weeks 2--9: Standard Weekly Workflow}
 Each week follows the established structure:
 \begin{itemize}
     \item Annotated Bibliography (due Tuesday before class).
@@ -431,24 +431,6 @@ Each week follows the established structure:
     \item Synthesis Draft (due Thursday).
     \item Peer Review (due Friday).
     \item Final Synthesis \& Optional Reflection (due Saturday).
-\end{itemize}
-
-\paragraph{Week 9: 21st Century Challenges}
-\begin{itemize}
-    \item \textbf{Content}:
-    \begin{itemize}
-        \item \citet{maynard-moody2012}, *Social Equities and Inequities in Practice*.
-        \item \citet{GOODEN2017}, *Social Equity and Evidence*.
-        \item \citet{mccandless2022}, *A Long Road*.
-        \item \citet{Denhardt2015}, *The New Public Service*, Chapters 10–12.
-    \end{itemize}
-    \item \textbf{Assignments}:
-    \begin{itemize}
-        \item Annotated Bibliography (due Tuesday before class).
-        \item Synthesis Draft (due Thursday).
-        \item Peer Review (due Friday).
-        \item Final Synthesis \& Optional Reflection (due Saturday).
-    \end{itemize}
 \end{itemize}
 
 \paragraph{Week 10: Capstone Synthesis}
