skip week fomatting

--- a/POSC 521 MPA Capstone/2024-25 Spring/POSC521_2025_Spring.tex
+++ b/POSC 521 MPA Capstone/2024-25 Spring/POSC521_2025_Spring.tex
@@ -477,7 +477,7 @@ Bonus Reflections & 5\% \\
 \end{tabular}
 \end{table}
 
-\paragraph Note: Students may skip one week of the annotated bibliography, synthesis, and reflection assignment during the semester. This option is intended to accommodate unexpected events or personal commitments. If you choose to skip a week, please notify the professor in advance. In place of the final synthesis during the skip week place a note in the Canvas assignment indicating that you are using your skip week.
+\paragraph{} Note: Students may skip one week of the annotated bibliography, synthesis, and reflection assignment during the semester. This option is intended to accommodate unexpected events or personal commitments. If you choose to skip a week, please notify the professor in advance. In place of the final synthesis during the skip week place a note in the Canvas assignment indicating that you are using your skip week.
 
 \subsection*{2) Reading Discussion Facilitation}
 A group of students will be responsible for facilitating the discussion of the assigned readings each week. The facilitators will lead the class in a discussion of the readings, pose questions to stimulate critical thinking and analysis, and encourage active participation from all students. The facilitators will also provide a brief summary of the readings and highlight the key points for discussion. The facilitators will be selected at the beginning of the semester, and the schedule will be posted on \emph{Canvas}. The facilitators will be graded based on the following criteria:
