weekly grade breakdown - no bonus

--- a/POSC 521 MPA Capstone/2024-25 Spring/POSC521_2025_Spring.tex
+++ b/POSC 521 MPA Capstone/2024-25 Spring/POSC521_2025_Spring.tex
@@ -472,7 +472,7 @@ Weekly Annotated Bibliographies & 20\% \\
 Weekly Synthesis Papers & 40\% \\
 Peer Reviews & 15\% \\
 Capstone Synthesis Paper & 20\% \\
-Bonus Reflections & 5\% \\
+Reflections & 5\% \\
 \hline
 \end{tabular}
 \end{table}
