--- a/POSC 521 MPA Capstone/2024-25 Spring/POSC521_2025_Spring.tex
+++ b/POSC 521 MPA Capstone/2024-25 Spring/POSC521_2025_Spring.tex
@@ -480,7 +480,7 @@ Reflections & 5\% \\
 \paragraph{} Note: Students may skip one week of the annotated bibliography, synthesis, and reflection assignment during the semester. This option is intended to accommodate unexpected events or personal commitments. If you choose to skip a week, please notify the professor in advance. In place of the final synthesis during the skip week place a note in the Canvas assignment indicating that you are using your skip week.
 
 \subsection*{2) Reading Discussion Facilitation}
-A pair of students will be responsible for facilitating the discussion of the assigned readings each week. The facilitators will lead the class in a discussion of the readings, pose questions to stimulate critical thinking and analysis, and encourage active participation from all students. The facilitators will also provide a brief summary of the readings and highlight the key points for discussion. The facilitators will be selected at the beginning of the semester, and the schedule will be posted on \emph{Canvas}. The facilitators will be graded based on the following criteria:
+Students will be responsible for facilitating the discussion of the assigned readings each week, for Weeks 3 through 9. This can be done individually or in pairs. The facilitators will lead the class in a discussion of the readings, pose questions to stimulate critical thinking and analysis, and encourage active participation from all students. The facilitators will also provide a brief summary of the readings and highlight the key points for discussion. The facilitators will be selected at the beginning of the semester, and the schedule will be posted on \emph{Canvas}. The facilitators will be graded based on the following criteria:
 
 \begin{itemize}
     \item Preparation: The facilitators are well-prepared and have a thorough understanding of the readings.
@@ -531,7 +531,7 @@ This capstone project allows students to deepen their understanding of their MPA
 \paragraph*{Submission Timeline:}
 \begin{itemize}
     \item \textbf{Topic Outline:} Due Week 13
-    \item \textbf{First Draft:} Due Week 14
+    \item \textbf{Literature Review:} Due Week 14
     \item \textbf{Final Paper:} Due Week 16
 \end{itemize}
 
@@ -551,7 +551,7 @@ The due dates for the course requirements are as follows:
     \begin{itemize}
         \item Annotated Bibliography and Synthesis: 
         \begin{itemize}
-            \item Annotated Bibliographies and Syntheses: Due each week by 11:59 p.m. on Wednesday
+            \item Annotated Bibliographies and Syntheses: Due each week by 7:00 p.m. on Tuesday
             \item Peer Review: Due each week by 11:59 p.m. on Friday
             \item Final Synthesis: Due each week by 11:59 p.m. on Saturday
             \item Personal Reflection: Due each week by 11:59 p.m. on Saturday
@@ -563,8 +563,8 @@ The due dates for the course requirements are as follows:
         \end{itemize}
         \item Concentration Area Paper:
         \begin{itemize}
-            \item Topic Selection: Due on 4/20
-            \item Literature Review Draft: Due on 4/27
+            \item Topic Selection: Due on 4/26
+            \item Literature Review Draft: Due on 5/3
             \item Final Draft: Due on 5/13 by 9:00 p.m.
         \end{itemize}
     \end{itemize}
@@ -689,7 +689,7 @@ D- & 50.0 -- 59.9 & F & 0 -- 49.9\\
     \item Due Thursday: Synthesis Paper
     \item Due Friday: Peer Review
     \item Due Saturday: Final Synthesis and Personal Reflection
-\end{itemize}
+\end{itemize}Wednesday
 
 \subsection*{Week 6, Starting 2/23: Performance Management}
 \begin{itemize}
