--- a/POSC 521 MPA Capstone/2024-25 Spring/POSC521_2025_Spring.tex
+++ b/POSC 521 MPA Capstone/2024-25 Spring/POSC521_2025_Spring.tex
@@ -689,7 +689,7 @@ D- & 50.0 -- 59.9 & F & 0 -- 49.9\\
     \item Due Thursday: Synthesis Paper
     \item Due Friday: Peer Review
     \item Due Saturday: Final Synthesis and Personal Reflection
-\end{itemize}Wednesday
+\end{itemize}
 
 \subsection*{Week 6, Starting 2/23: Performance Management}
 \begin{itemize}
