--- a/POSC 521 MPA Capstone/2024-25 Spring/POSC521_2025_Spring.tex
+++ b/POSC 521 MPA Capstone/2024-25 Spring/POSC521_2025_Spring.tex
@@ -231,7 +231,7 @@ In this course, the use of AI is permitted and encouraged as a learning tool, wi
 
 \begin{itemize}
     \item \textbf{Allowed}: Using AI for feedback on annotated bibliographies and syntheses, as outlined in the assignment.
-    \item \textbf{Allowed}: Using AI for the optional reflection activity.
+    \item \textbf{Allowed}: Using AI for the reflection activity.
     \item \textbf{Not Allowed}: Submitting AI-generated content as your own work without substantial human input and critical analysis.
     \item \textbf{Not Mandatory}: The use of AI is optional. Students are not required to use AI tools if they prefer not to.
 \end{itemize}
@@ -430,7 +430,7 @@ Each week follows the established structure:
     \item In-Person Discussion (Tuesday).
     \item Synthesis Draft (due Thursday).
     \item Peer Review (due Friday).
-    \item Final Synthesis \& Optional Reflection (due Saturday).
+    \item Final Synthesis \& Reflection (due Saturday).
 \end{itemize}
 
 \paragraph{Week 10: Capstone Synthesis}
@@ -452,12 +452,7 @@ Each week follows the established structure:
             \item Synthesize weekly topics into a cohesive argument.
             \item Highlight themes, patterns, contradictions, and future implications.
         \end{itemize}
-        \item \textbf{Assignments}:
-        \begin{itemize}
-            \item \textbf{Capstone Draft} (due Thursday night).
-            \item \textbf{Peer Review} (due Friday night).
-            \item \textbf{Final Capstone Submission} (due Saturday night).
-        \end{itemize}
+        \item \textbf{Assignment}: Final Capstone Submission (due Saturday night)
     \end{itemize}
 \end{itemize}
 
@@ -755,7 +750,7 @@ D- & 50.0 -- 59.9 & F & 0 -- 49.9\\
     \item Due Saturday: Final Synthesis and Personal Reflection
 \end{itemize}
 
-\subsection*{Week 10, Starting 3/23: Capstone}
+\subsection*{Week 10, Starting 3/23: Capstone Synthesis Paper}
 \begin{itemize}
     \item \textbf{In-person Session}: Capstone Synthesis
     \item Readings:
@@ -763,9 +758,7 @@ D- & 50.0 -- 59.9 & F & 0 -- 49.9\\
             \item Review key themes from the course
             \item Peer brainstorming and feedback on capstone ideas
         \end{itemize}
-    \item Due Thursday: Capstone Draft
-    \item Due Friday: Peer Review
-    \item Due Saturday: Final Capstone Submission
+    \item Due Saturday: Final Capstone Synthesis Paper Submission
 \end{itemize}
 
 \subsection*{Spring Break, Starting 3/30}
