--- a/POSC 521 MPA Capstone/2024-25 Spring/POSC521_2025_Spring.tex
+++ b/POSC 521 MPA Capstone/2024-25 Spring/POSC521_2025_Spring.tex
@@ -219,7 +219,7 @@ All written work must be submitted in a professional format, including proper gr
 \noindent For the purposes of this course, generative AI refers to artificial intelligence systems capable of producing human-like text, images, or other content. This includes, but is not limited to:
 
 \begin{itemize}
-    \item Large language models (e.g., GPT-3, GPT-4)
+    \item Large language models (LLM) (e.g., GPT-3, GPT-4)
     \item Text-to-image generators (e.g., DALL-E, Midjourney)
     \item AI-powered writing assistants (e.g., ChatGPT, Claude)
     \item Automated content generators
@@ -329,12 +329,10 @@ Each week includes the following components:
                     \item Relevance to the week’s topic and implications for public administration.
                 \end{itemize}
             \end{itemize}
-            \item \textbf{Optional AI Integration}: Students may use ChatGPT to review their annotations:
+            \item \textbf{Optional AI Integration}: Students may use Open AI's \href{https://chat.openai.com/}{ChatGPT}, Anthropic's \href{https://www.anthropic.com/}{Claude}, Google's \href{https://www.google.com/search/about/}{Gemini}, or the university's \href{https://titangpt.fullerton.edu/auth/jwt/login}{TitanGPT} to review their annotations:
             \begin{quote}
-                I’ve completed an annotated bibliography for [Reading Title]. Here’s the citation: [Insert Citation]. \\ 
-                The summary is: [Insert Summary]. \\ 
-                The relevance is: [Insert Relevance]. \\ 
-                Could you provide feedback on clarity and completeness?
+                \texttt{"I've completed an annotated bibliography for an article. The citation is [insert citation]. The summary I wrote is [insert summary]. I've noted the relevance as [insert relevance]. Could you provide feedback on my summary and relevance note?"}
+
             \end{quote}
         \end{itemize}
     \end{itemize}
@@ -357,9 +355,8 @@ Each week includes the following components:
             \end{itemize}
             \item \textbf{AI Integration}:
             \begin{quote}
-                I’ve written a synthesis paper based on [number] readings about [topic]. \\ 
-                Here’s the draft: [Insert Draft]. \\ 
-                Could you identify gaps, suggest additional connections, or refine the analysis?
+                \texttt{"I've synthesized information from [number] articles on [topic]. Here's my draft of the synthesis [insert draft]. Could you provide feedback and suggest any connections or contrasts I might have missed?"}
+
             \end{quote}
         \end{itemize}
     \end{itemize}
@@ -380,24 +377,18 @@ Each week includes the following components:
         \item \textbf{Instructions}:
         \begin{itemize}
             \item Revise the synthesis paper based on peer feedback.
-            \item \textbf{Optional AI Integration}:
-            \begin{quote}
-                I’ve revised my synthesis paper after peer review. \\ 
-                Could you evaluate whether the revisions address key feedback and suggest improvements for clarity or depth?
-            \end{quote}
             \item Submit the final synthesis to Canvas.
-            \item \textbf{Reflection}:
+        \end{itemize}
+    \end{itemize}
+
+    \item \textbf{Personal Reflection (Due Saturday Night)}
             \begin{itemize}
                 \item Reflect on your learning process and the feedback received.
                 \item Optional: Use ChatGPT to refine reflections:
                 \begin{quote}
-                    I’ve written a reflection on my learning process for this week. \\ 
-                    Here’s my reflection: [Insert Reflection]. \\ 
-                    Could you suggest additional insights or perspectives to consider?
+                    \texttt{"I've completed a reflection on my learning process for this week's synthesis assignment. Here's my reflection [insert reflection]. Could you provide feedback or ask questions to provoke further thought?"}
                 \end{quote}
             \end{itemize}
-        \end{itemize}
-    \end{itemize}
 \end{enumerate}
 
 \subsubsection*{Key Weeks and Capstone Activities}
