AI for reflection

--- a/POSC 521 MPA Capstone/2024-25 Spring/POSC521_2025_Spring.tex
+++ b/POSC 521 MPA Capstone/2024-25 Spring/POSC521_2025_Spring.tex
@@ -384,7 +384,7 @@ Each week includes the following components:
     \item \textbf{Personal Reflection (Due Saturday Night)}
             \begin{itemize}
                 \item Reflect on your learning process and the feedback received.
-                \item Optional: Use ChatGPT to refine reflections:
+                \item Optional: Use a preferred AI model to refine reflections:
                 \begin{quote}
                     \texttt{"I've completed a reflection on my learning process for this week's synthesis assignment. Here's my reflection [insert reflection]. Could you provide feedback or ask questions to provoke further thought?"}
                 \end{quote}
