update capstone synthesis paper

--- a/POSC 521 MPA Capstone/2024-25 Spring/POSC521_2025_Spring.tex
+++ b/POSC 521 MPA Capstone/2024-25 Spring/POSC521_2025_Spring.tex
@@ -33,8 +33,8 @@
         urlcolor=cyan,
         citecolor=purple,
 }
-\usepackage[scaled]{roboto} % Load the helvet package
-\renewcommand*\familydefault{\sfdefault} % Set the default font to be sans-serif
+\usepackage[scaled]{helvet} 
+\renewcommand*\familydefault{\sfdefault}
 \newenvironment{boldnumlist}
 {\begin{enumerate}[label=\textbf{\arabic*.}]}
 {\end{enumerate}}
@@ -391,28 +391,7 @@ Each week includes the following components:
             \end{itemize}
 \end{enumerate}
 
-\subsubsection*{Key Weeks and Capstone Activities}
-
-\paragraph{Week 1: Public Administration Theory I (Asynchronous)}
-\begin{itemize}
-    \item \textbf{Mode}: Asynchronous (video provided).
-    \item \textbf{Content}:
-    \begin{itemize}
-        \item Video lecture and foundational readings:
-        \begin{itemize}
-            \item \citet{wilson1887}, *The Study of Administration*.
-            \item \citet{Weber1946}, *Bureaucracy*.
-            \item \citet{gulick1937}, *Notes on the Theory of Organization*.
-            \item \citet{Follett1926}, *The Giving of Orders*.
-            \item \citet{simon1946}, *Proverbs of Administration*.
-        \end{itemize}
-    \end{itemize}
-    \item \textbf{Assignments}:
-    \begin{itemize}
-        \item \textbf{Annotated Bibliography (Optional)}: Students may complete this to prepare for Week 2.
-        \item No synthesis or peer review this week.
-    \end{itemize}
-\end{itemize}
+\subsubsection*{Capstone Synthesis Paper}
 
 \paragraph{Weeks 2--9: Standard Weekly Workflow}
 Each week follows the established structure:
