--- a/POSC 521 MPA Capstone/2024-25 Spring/POSC521_2025_Spring.tex
+++ b/POSC 521 MPA Capstone/2024-25 Spring/POSC521_2025_Spring.tex
@@ -418,7 +418,7 @@ Each week follows the established structure:
         \item \textbf{Objective}: Integrate course material into a comprehensive analysis.
         \item \textbf{Requirements}:
         \begin{itemize}
-            \item Length: 8–10 pages.
+            \item Length: 8--10 pages.
             \item Synthesize weekly topics into a cohesive argument.
             \item Highlight themes, patterns, contradictions, and future implications.
         \end{itemize}
