--- a/POSC 521 MPA Capstone/2024-25 Spring/521_Students.bib
+++ b/POSC 521 MPA Capstone/2024-25 Spring/521_Students.bib
@@ -479,7 +479,7 @@
   file = {/home/dadams/Zotero/storage/A7D5UQPE/Weber - 1946 - Bureaucracy.pdf}
 }
 
-@article{wilson1887,
+@article{WILSON1887a,
   title = {The {{Study}} of {{Administration}}},
   author = {Wilson, Woodrow},
   year = {1887},
