practice comp for week 10

--- a/POSC 521 MPA Capstone/2024-25 Spring/POSC521_2025_Spring.tex
+++ b/POSC 521 MPA Capstone/2024-25 Spring/POSC521_2025_Spring.tex
@@ -391,38 +391,29 @@ Each week includes the following components:
             \end{itemize}
 \end{enumerate}
 
-\subsubsection*{Capstone Synthesis Paper}
+\subsubsection*{Practice Comprehensive Exam Response}
 
-\paragraph{Weeks 2--9: Standard Weekly Workflow}
-Each week follows the established structure:
+\paragraph{Week 10: Comprehensive Exam Response}
 \begin{itemize}
-    \item Annotated Bibliography (due Tuesday before class).
-    \item In-Person Discussion (Tuesday).
-    \item Synthesis Draft (due Thursday).
-    \item Peer Review (due Friday).
-    \item Final Synthesis \& Reflection (due Saturday).
-\end{itemize}
-
-\paragraph{Week 10: Capstone Synthesis}
-\begin{itemize}
-    \item \textbf{In-Person Class (Tuesday)}: Final synthesis preparation.
+    \item \textbf{In-Person Class (Tuesday)}: Final preparation.
     \begin{itemize}
         \item \textbf{Activities}:
         \begin{itemize}
-            \item Review key themes from the course.
-            \item Peer brainstorming and feedback on capstone ideas.
+            \item Review key theoretical frameworks.
+            \item Discuss strategies for integrating course materials into a comprehensive argument.
         \end{itemize}
     \end{itemize}
-    \item \textbf{Capstone Synthesis Paper}:
+    \item \textbf{Comprehensive Exam Response}:
     \begin{itemize}
-        \item \textbf{Objective}: Integrate course material into a comprehensive analysis.
+        \item \textbf{Objective}: Demonstrate mastery of key themes by critically engaging with classical public administration theory, New Public Service, and New Public Management.
         \item \textbf{Requirements}:
         \begin{itemize}
-            \item Length: 8--10 pages.
-            \item Synthesize weekly topics into a cohesive argument.
-            \item Highlight themes, patterns, contradictions, and future implications.
+            \item Length: 1,620 words.
+            \item Address the provided exam question with clear argumentation and citations.
+            \item Use APA or Chicago author-date citation style.
+            \item Engage deeply with course readings.
         \end{itemize}
-        \item \textbf{Assignment}: Final Capstone Submission (due Saturday night)
+        \item \textbf{Assignment}: Final Exam Response Submission (due Saturday night).
     \end{itemize}
 \end{itemize}
 
@@ -436,12 +427,14 @@ Each week follows the established structure:
 Weekly Annotated Bibliographies & 20\% \\
 Weekly Synthesis Papers & 40\% \\
 Peer Reviews & 15\% \\
-Capstone Synthesis Paper & 20\% \\
+Comprehensive Exam Response & 20\% \\
 Reflections & 5\% \\
 \hline
 \end{tabular}
 \end{table}
+```
 
+This ensures a seamless transition from the previous capstone synthesis while making it clear that Week 10 now serves as a comprehensive exam-style response. Let me know if you’d like any refinements!
 \paragraph{} Note: Students may skip one week of the annotated bibliography, synthesis, and reflection assignment during the semester. This option is intended to accommodate unexpected events or personal commitments. If you choose to skip a week, please notify the professor in advance. In place of the final synthesis during the skip week place a note in the Canvas assignment indicating that you are using your skip week.
 
 \subsection*{2) Reading Discussion Facilitation}
@@ -567,7 +560,7 @@ D- & 50.0 -- 59.9 & F & 0 -- 49.9\\
         \toprule
     \textbf{Assignment} & \textbf{Percentage} \\
     \midrule
-    Weekly Readings Assignments & 60\% \\
+    Weekly Readings Assignments & 30\% \\
     Reading Discussion Facilitation & 5\% \\
     MPA Comprehensive General Area Essay Exam & 35\% \\
     Concentration Area Paper & 30\% \\
@@ -596,7 +589,7 @@ D- & 50.0 -- 59.9 & F & 0 -- 49.9\\
     \item \textbf{In-person Session}: Introduction to the Course
     \item Readings:
         \begin{itemize}
-            \item \citet{wilson1887}, ``The Study of Administration''
+            \item \citet{WILSON1887a}, ``The Study of Administration''
             \item \citet{Weber1946}, ``Bureaucracy'' 
             \item \citet{gulick1937}, ``Notes on the Theory of Organization'' 
             \item \citet{Follett1926}, ``The Giving of Orders'' 
