removed gpt garbage

--- a/POSC 521 MPA Capstone/2024-25 Spring/POSC521_2025_Spring.tex
+++ b/POSC 521 MPA Capstone/2024-25 Spring/POSC521_2025_Spring.tex
@@ -395,7 +395,7 @@ Each week includes the following components:
 
 \paragraph{Week 10: Comprehensive Exam Response}
 \begin{itemize}
-    \item \textbf{In-Person Class (Tuesday)}: Final preparation.
+    \item \textbf{In-Person Class}: Question opens on Sunday. In class we'll have a final preparation.
     \begin{itemize}
         \item \textbf{Activities}:
         \begin{itemize}
@@ -432,9 +432,7 @@ Reflections & 5\% \\
 \hline
 \end{tabular}
 \end{table}
-```
 
-This ensures a seamless transition from the previous capstone synthesis while making it clear that Week 10 now serves as a comprehensive exam-style response. Let me know if you’d like any refinements!
 \paragraph{} Note: Students may skip one week of the annotated bibliography, synthesis, and reflection assignment during the semester. This option is intended to accommodate unexpected events or personal commitments. If you choose to skip a week, please notify the professor in advance. In place of the final synthesis during the skip week place a note in the Canvas assignment indicating that you are using your skip week.
 
 \subsection*{2) Reading Discussion Facilitation}
