--- a/POSC 521 MPA Capstone/2024-25 Spring/POSC521_2025_Spring.tex
+++ b/POSC 521 MPA Capstone/2024-25 Spring/POSC521_2025_Spring.tex
@@ -711,16 +711,30 @@ D- & 50.0 -- 59.9 & F & 0 -- 49.9\\
     \item Due Saturday: Final Synthesis and Personal Reflection
 \end{itemize}
 
-\subsection*{Week 10, Starting 3/23: Capstone Synthesis Paper}
+\subsection*{Week 10, Starting 3/23: Practice Comprehensive Exam Response}
 \begin{itemize}
-    \item \textbf{In-person Session}: Capstone Synthesis
-    \item Readings:
+    \item \textbf{In-person Session}: Preparation for the Practice Comprehensive Exam Response
+    \begin{itemize}
+        \item Review key theoretical frameworks in public administration.
+        \item Discuss strategies for integrating course materials into a comprehensive argument.
+        \item Peer discussion and synthesis planning.
+    \end{itemize}
+    \item \textbf{Readings}: 
+    \begin{itemize}
+        \item Revisit core course texts on Classical Public Administration, New Public Service, and New Public Management.
+        \item Review prior weekly synthesis papers and annotated bibliographies for thematic connections.
+    \end{itemize}
+    \item \textbf{Assignments}:
+    \begin{itemize}
+        \item \textbf{Practice Comprehensive Exam Response} (Due Saturday, 40 points).
         \begin{itemize}
-            \item Review key themes from the course
-            \item Peer brainstorming and feedback on capstone ideas
+            \item 1,620-word analytical essay.
+            \item Incorporate course literature and theoretical frameworks.
+            \item Use APA or Chicago author-date citation style.
         \end{itemize}
-    \item Due Saturday: Final Capstone Synthesis Paper Submission
+    \end{itemize}
 \end{itemize}
+
 
 \subsection*{Spring Break, Starting 3/30}
 \begin{itemize}
