--- a/POSC 521 MPA Capstone/2024-25 Spring/521_Students.bib
+++ b/POSC 521 MPA Capstone/2024-25 Spring/521_Students.bib
@@ -398,7 +398,7 @@
   file = {/home/dadams/Zotero/storage/FRRD5UBM/Nicholson-Crotty - 2004 - Public Management and Organizational Performance The Case of Law Enforcement Agencies.pdf}
 }
 
-@article{raineyComparingPublicPrivate2000,
+@article{RAINEY2000a,
   title = {Comparing {{Public}} and {{Private Organizations}}: {{Empirical Research}} and the {{Power}} of the {{A Priori}}},
   shorttitle = {Comparing {{Public}} and {{Private Organizations}}},
   author = {Rainey, Hal G. and Bozeman, Barry},
@@ -411,9 +411,10 @@
   pages = {447--469},
   publisher = {{[Oxford University Press, Journal of Public Administration Research and Theory, Inc., Public Management Research Association]}},
   issn = {1053-1858},
-  urldate = {2024-08-14},
+  urldate = {2025-03-10},
   abstract = {Research comparing public and private organizations and examining the publicness of organizations represents a substantial and growing body of empirical evidence, relevant to many international issues in political economy and organization theory such as the privatization of public services. This article assesses several major streams in this research over the last two decades, which in some ways refute widely held a priori assumptions about similarities and differences between public and private organizations but which in some ways support such assumptions. The review covers research on goal complexity and ambiguity, organizational structure, personnel and purchasing processes, and work-related attitudes and values. The research results converge in important ways, but they also present anomalies. For example, in spite of virtually universal agreement among scholars that public organizations have more goal complexity and ambiguity, public managers do not differ from business managers in response to survey questions about such matters. Public managers do not differ from business managers on perceptions about organizational formalization, in spite of a chorus of assertions that government agencies have more red tape and rules than private firms have. Public managers do, however, show very sharp differences in response to questions about constraints under personnel and purchasing rules. The article concludes with an assessment of the credibility of these streams of research through consideration of alternative plausible hypotheses.},
-  note = {\url{https://www.jstor.org/stable/3525651}}
+  note = {\url{https://www.jstor.org/stable/3525651}},
+  file = {/home/dadams/Zotero/storage/7ZAK6H9A/Rainey and Bozeman - 2000 - Comparing Public and Private Organizations Empirical Research and the Power of the A Priori.pdf}
 }
 
 @article{RIVERA2023,
@@ -499,4 +500,11 @@
 
 @book{zotero-1907,
   type = {Book}
+}
+
+@misc{zotero-2868,
+  title = {Zotero {\textbar} {{Connectors}}},
+  urldate = {2025-03-10},
+  howpublished = {\url{https://www.zotero.org/download/connectors}},
+  file = {/home/dadams/Zotero/storage/PAQ292GV/connectors.html}
 }
