--- a/POSC 315 Intro Policy/2025 Summer/posc315_summer_2025.tex
+++ b/POSC 315 Intro Policy/2025 Summer/posc315_summer_2025.tex
@@ -208,39 +208,46 @@ Students are expected to adhere to the university's policy on netiquette. The un
 \subsection*{Reading Quizzes (20\% of Final Grade)}
 Weekly reading quizzes assess your understanding of the assigned material and help you stay engaged with key concepts. Quizzes consist of multiple-choice questions delivered through \emph{Canvas}. Each quiz opens on Monday (Tuesday during Week 1) and closes Friday at 11:59 p.m. Late quizzes are not accepted due to the compressed schedule.
 
-\subsection*{Policy Writing Project (80\% of Final Grade)}
+\subsection*{Policy Writing Project (75\% of Final Grade)}
 This course features a scaffolded policy writing project designed to build your analytical and writing skills in applied policy analysis. You will complete a series of short, focused assignments that culminate in a final policy memo. This process ensures steady progress and allows for instructor feedback at each stage.
 
 \subsubsection*{Project Stages and Deadlines}
 \begin{enumerate}
-    \item \textbf{Policy Problem Proposal (10\% of Final Grade) - Due Friday, May 31} 
+    \item \textbf{Policy Problem Proposal (10\% of Final Grade) - Due Friday, May 30} 
     \begin{itemize}
         \item Submit a 1-2 page memo identifying a policy problem, its significance, and the policy actors involved.
     \end{itemize}
 
-    \item \textbf{Problem Definition Memo (15\% of Final Grade) - Due Friday, June 7}
+    \item \textbf{Problem Definition Memo (15\% of Final Grade) - Due Friday, June 6}
     \begin{itemize}
         \item Write a 2-3 page memo clearly defining the chosen policy problem, including relevant policy contexts and key stakeholders.
     \end{itemize}
 
-    \item \textbf{Alternatives and Evaluation Matrix (15\% of Final Grade) - Due Friday, June 14}
+    \item \textbf{Alternatives and Evaluation Matrix (15\% of Final Grade) - Due Friday, June 13}
     \begin{itemize}
         \item Create a policy alternatives matrix summarizing at least three possible solutions to the problem. Include a brief (1-page) narrative explaining your evaluation criteria.
     \end{itemize}
 
-    \item \textbf{Draft Policy Memo (15\% of Final Grade) - Due Friday, June 21}
+    \item \textbf{Draft Policy Memo (15\% of Final Grade) - Due Friday, June 20}
     \begin{itemize}
-        \item Submit a 4-5 page draft policy memo applying concepts from the course. Instructor feedback will help guide your revisions.
+        \item Submit a 4--5 page draft policy memo that includes your Executive Summary, Problem Definition, Alternatives Matrix, and a preliminary Recommendation.
+        \item Continue working in the same document from Weeks 2 and 3. Use \emph{Track Changes} (Word) or \emph{Suggesting mode} (Google Docs) to show your edits.
+        \item Instructor feedback will help guide your revisions.
     \end{itemize}
 
     \item \textbf{Final Policy Memo and Reflection (Final Memo 20\%, Reflection 5\%) - Due Friday, June 27}
     \begin{itemize}
-        \item Submit the final 5-7 page policy memo incorporating feedback and additional analysis. 
-        \item Also submit a 1-2 page personal reflection on what you learned about policy analysis and the writing process.
+        \item Submit the final 5--7 page memo, revised in response to feedback. Continue using \emph{Track Changes} or \emph{Suggesting mode} to show revisions.
+        \item Also submit a clean, finalized version of the memo and a 1--2 page personal reflection on what you learned about policy analysis and the writing process.
     \end{itemize}
+
 \end{enumerate}
 
 \paragraph{} This project develops your critical thinking, writing, and applied policy analysis skills. All assignments must be submitted via \emph{Canvas} by 11:59 p.m. on the due date.
+
+\subsection*{Final Reflection (5\% of Final Grade)}
+
+The final reflection is a 1-2 page personal reflection on what you learned about public policy, policy analysis, and the writing process. This assignment is due on the last day of class, Friday, June 27.
 
 
 \section{Grading Breakdown}
@@ -278,39 +285,39 @@ This course features a scaffolded policy writing project designed to build your 
 \textbf{Topics:} \newline
 Chapters 1-3: Introducing the Policy Process; Elements of the Policy-Making System; Contexts of Public Policy Making.\newline
 \textbf{Assignments:} \begin{itemize}
-  \item Reading Quiz 1 (Tuesday-Friday)
-  \item Policy Problem Proposal (1-2 pages) \textbf{Due Friday, May 31}
+  \item Reading Quiz 1 (Tuesday--Saturday)
+  \item Policy Problem Proposal (1-2 pages) \textbf{Due Friday, May 30}
 \end{itemize}
 
 \subsection*{Week 2: June 3 - June 7}
 \textbf{Topics:} \newline
 Chapters 4-6: Official Actors; Unofficial Actors; Agenda Setting, Groups, and Power.\newline
 \textbf{Assignments:} \begin{itemize}
-  \item Reading Quiz 2 (Monday-Friday)
-  \item Problem Definition Memo (2-3 pages) \textbf{Due Friday, June 7}
+  \item Reading Quiz 2 (Monday--Saturday)
+  \item Problem Definition Memo (2-3 pages) \textbf{Due Friday, June 6}
 \end{itemize}
 
 \subsection*{Week 3: June 10 - June 14}
 \textbf{Topics:} \newline
 Chapters 7-8: Policies and Policy Types; Decision Making and Policy Analysis.\newline
 \textbf{Assignments:} \begin{itemize}
-  \item Reading Quiz 3 (Monday-Friday)
-  \item Alternatives and Evaluation Matrix \textbf{Due Friday, June 14}
+  \item Reading Quiz 3 (Monday--Saturday)
+  \item Alternatives and Evaluation Matrix \textbf{Due Friday, June 13}
 \end{itemize}
 
 \subsection*{Week 4: June 17 - June 21}
 \textbf{Topics:} \newline
 Chapters 9-10: Policy Design and Tools; Policy Implementation, Failure, and Learning.\newline
 \textbf{Assignments:} \begin{itemize}
-  \item Reading Quiz 4 (Monday-Friday)
-  \item Draft Policy Memo (4-5 pages) \textbf{Due Friday, June 21}
+  \item Reading Quiz 4 (Monday--Saturday)
+  \item Draft Policy Memo (4-5 pages) \textbf{Due Friday, June 20}
 \end{itemize}
 
 \subsection*{Week 5: June 24 - June 27}
 \textbf{Topics:} \newline
 Chapter 11: Science and Theory in the Study of Public Policy; Course Wrap-Up.\newline
 \textbf{Assignments:} \begin{itemize}
-  \item Reading Quiz 5 (Monday-Friday)
+  \item Reading Quiz 5 (Monday--Friday)
   \item Final Policy Memo (5-7 pages) \textbf{Due Friday, June 27}
   \item Final Reflection (1-2 pages) \textbf{Due Friday, June 27}
 \end{itemize}
