--- a/POSC 521 MPA Capstone/2024-25 Spring/521_Students.bib
+++ b/POSC 521 MPA Capstone/2024-25 Spring/521_Students.bib
@@ -60,6 +60,17 @@
   file = {/home/dadams/Zotero/storage/DYE9IH7E/Brown et al. - 2006 - Managing Public Service Contracts Aligning Values.pdf;/home/dadams/Zotero/storage/E9XWMK7J/j.1540-6210.2006.00590.html}
 }
 
+@inproceedings{buolamwini2018gender,
+  title = {Gender Shades: {{Intersectional}} Accuracy Disparities in Commercial Gender Classification},
+  booktitle = {Proceedings of Machine Learning Research},
+  author = {Buolamwini, Joy and Gebru, Timnit},
+  year = {2018},
+  volume = {81},
+  pages = {1--15},
+  publisher = {PMLR},
+  address = {Stockholm, Sweden}
+}
+
 @article{Christensen2017,
   title = {Public Service Motivation Research: {{Lessons}} for Practice},
   author = {Christensen, Robert K and Paarlberg, Laurie E and Perry, James L},
